# myAgent

./: .env.example  .gitignore  API_DOCS.md  README.md  agent_engine.db  pyproject.toml  start.sh
.github/workflows/: ci.yml
advanced/: __init__.py  intervention.py  nested_dag.py  streaming.py
backend/: __init__.py  cli.py  database.py  engine.py  rag_store.py  security.py  server.py  user_mcp.py  user_skill.py
checkpoints/: emergency_20260619_125417.json
config/: __init__.py  database.yaml  models.yaml  tools.yaml
core/: __init__.py  checkpoint.py  contracts.py  dag.py  dag_checkpoint.py  event_bus.py  executor.py  graceful_shutdown.py  graph_memory.py  memory.py  recovery.py  state_machine.py  statechart.py  task.py  tool_registry.py  types.py  vector_store.py
customer_service/: model_config.py
docs/: customer-service-integration.md  database-config.md
examples/: customer_service_demo.py  main.py  plugin_demo.py
llm/: __init__.py  agent.py  client.py  conversation_compressor.py  state_driver.py
mcp/: __init__.py  cli.py
monitoring/: __init__.py  alerts.py  metrics.py
monitoring/grafana/: alerts.yml  dashboard.json  dashboards.yml  prometheus.yml
multi_agent/: __init__.py
myAgent/: __init__.py
myagent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plugins/: README.md  __init__.py
plugins/calculator/: __init__.py  plugin.json
plugins/my_custom_tool/: __init__.py  plugin.json
plugins/search/: __init__.py  plugin.json
plugins/weather/: __init__.py  plugin.json
rag/: __init__.py  assembler.py  embedding.py  loader.py  pipeline.py  reranker.py  splitter.py
runtime/: __init__.py  agent_runtime.py
skills/: __init__.py  cli.py  scaffold.py  v2.py
skills/code_review/: SKILL.md  skill.json  skill.py
skills/code_review/references/: performance_best_practices.md  security_checklist.md
skills/code_review/scripts/: pre_check.sh
skills/data_analyzer/: SKILL.md  skill.json  skill.py
skills/data_analyzer/references/: pandas_best_practices.md  visualization_guide.md
skills/docs_writer/: SKILL.md  skill.json  skill.py
skills/my_custom_skill/: SKILL.md  skill.json  skill.py
skills/my_final_skill/: SKILL.md  skill.json  skill.py
skills/my_test_skill/: .gitignore  SKILL.md  skill.json  skill.py
skills/terraform_deploy/: SKILL.md  skill.json  skill.py
skills/terraform_deploy/scripts/: validate_tf.sh
skills/test_custom_skill_final/: SKILL.md  skill.json  skill.py
tasks/: __init__.py  celery_app.py
tests/: __init__.py  test_myagent.py
(+3 files in other folders)
